{
    "name": "ControlMaster",
    "maps": [
        {
            "name": "Player 1",
            "id": "24a12d97-2828-4118-bf72-fab9695c0692",
            "actions": [
                {
                    "name": "move",
                    "type": "Value",
                    "id": "785f0aaf-8d0a-4225-ae83-d599d136635b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Reset",
                    "type": "Button",
                    "id": "14cf3de4-b670-452b-8207-469f433e150c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "rotate",
                    "type": "Value",
                    "id": "b83e641c-28bb-4b63-8ad0-04bf3a54aff8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "grabAll",
                    "type": "Button",
                    "id": "cb499202-af1d-4f14-9787-07bc359d4211",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "grabL",
                    "type": "Button",
                    "id": "523ec919-f7e5-4024-998f-a4284a659852",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "grabR",
                    "type": "Button",
                    "id": "5c449f65-263f-4db6-a7c4-6c4b934505d1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "arm",
                    "type": "Button",
                    "id": "d3191ad7-d279-4981-9b97-4504f07b3715",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "slowmode",
                    "type": "Button",
                    "id": "a161c023-46ed-420c-be6f-7dfacd4eb5f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f25aed7c-d330-4430-9f27-e3356cc85d29",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "8BitDo (XBOX Bluetooth)",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "0b2d4931-ffdf-417e-adf3-da75f2668733",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "099b7559-e7e8-4e4e-8898-6777644d06dd",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a67cdbbb-e0af-46c8-b576-6ff73fd8385c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "06c97fb2-e83d-4c23-a00c-b9c7947b4379",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "01d9b9c0-fa1c-408c-8971-f3dba38f93af",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f9aa3f78-466c-41d9-8463-73f76975a499",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "8BitDo (XBOX Bluetooth)",
                    "action": "Reset",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a0d6003-ee32-4134-9c3c-8f059c053e29",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "8BitDo (XBOX Bluetooth)",
                    "action": "Reset",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "845f183e-3e99-4f77-923d-d75ba1301fda",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f97e1263-fe6b-4ff7-8444-978cbec6f33c",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "8BitDo (XBOX Bluetooth)",
                    "action": "rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f12096ed-c69c-4ab8-9a08-0dc5da7cadd9",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "8BitDo (XBOX Bluetooth)",
                    "action": "rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "57553add-ea8e-4c5a-8054-6c6f146b2602",
                    "path": "<Gamepad>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "8BitDo (XBOX Bluetooth)",
                    "action": "rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "02c4de99-6cf3-47c2-9a20-ee5e2cc52e8e",
                    "path": "<Gamepad>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "8BitDo (XBOX Bluetooth)",
                    "action": "rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "10099bc8-c234-424c-b782-2ff189630ff5",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ca3c95ba-4438-405f-bb22-ebce18b479c5",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "8BitDo (XBOX Bluetooth)",
                    "action": "rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d901a3ec-e7cc-4f05-ac41-e45ac8b56f84",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "8BitDo (XBOX Bluetooth)",
                    "action": "rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2f25b712-3e38-4cbc-b934-4d0a9a3c651f",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "8BitDo (XBOX Bluetooth)",
                    "action": "rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "513bc439-0300-465b-b46b-4667798d73d2",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "8BitDo (XBOX Bluetooth)",
                    "action": "rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "994b1948-c858-46d7-94da-4fc8f14539d1",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "8BitDo (XBOX Bluetooth)",
                    "action": "grabAll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d8d2a1d-7b39-4ab7-b3e3-165d292ebde3",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "8BitDo (XBOX Bluetooth)",
                    "action": "grabAll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73e1a9df-a541-42f6-b7ef-7a09c8bdf286",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "8BitDo (XBOX Bluetooth)",
                    "action": "grabL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2b11842c-5c9b-4593-af01-515861e576f2",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "8BitDo (XBOX Bluetooth)",
                    "action": "grabL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8d46c7f-cdcb-4cf6-874d-b8e92ade36c5",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "8BitDo (XBOX Bluetooth)",
                    "action": "grabR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e13edb47-e744-4056-9437-2f3a3c4591d0",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "8BitDo (XBOX Bluetooth)",
                    "action": "grabR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5552b95-7920-4f1a-a414-264dede14535",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "8BitDo (XBOX Bluetooth)",
                    "action": "arm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e764cab-7a6f-4ea1-aa99-cdcd1ab2c7f9",
                    "path": "<Keyboard>/rightShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "8BitDo (XBOX Bluetooth)",
                    "action": "slowmode",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "8BitDo (XBOX Bluetooth)",
            "bindingGroup": "8BitDo (XBOX Bluetooth)",
            "devices": [
                {
                    "devicePath": "<XboxOneGampadiOS>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<XboxOneGamepadAndroid>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "New control scheme",
            "bindingGroup": "New control scheme",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}